# singlem

./: .gitattributes  .gitignore  .travis.yml  AGENTS.html  AGENTS.md  CHANGELOG.md  CITATION.cff  FAQ.html  Glossary.html  Installation.html  Lyrebird.html  MANIFEST.in  README.md  SKILL.html  build_dep_defs_from_pixi.py  build_docs.py  condense_sylph_methods.docx  doctave.yml  environment.yml  index.html  joint_condense_methods.md  pixi.toml  prelude  pyproject.toml  release.py  requirements.txt  search_index.json  setup.py  singlem.yml  strain_level_brainstorm.md
admin/: build_dep_defs_from_pixi.py  build_docs.py  environment.yml  release.py  requirements.txt  set_env_vars.sh  setup.sh
advanced/: condense.html  create.html  index.html  lyrebird_condense.html  lyrebird_renew.html  makedb.html  metapackage.html  query.html  regenerate.html  seqs.html
assets/: doctave-style.css
db/: .gitattributes
docker/: Dockerfile  Dockerfile.in  build.sh  test.fna
docs/: AGENTS.md  FAQ.md  Glossary.md  Installation.md  Installation.md.in  Lyrebird.md  README.md  SKILL.md  SKILL.md.in  installation.md
extras/: arb_metadata_rename.py  assign_gtdb_taxonomy_to_gtdb_genomes.py  condensed_profile_to_biobox.py  fill_condensed_coverages  genome_hunter.py  gtdb_vs_gtdb_query_parser.py  inter_lineage_distance_calculator.py  merge_metapackages.py  metapackage_slim_for_no_assign_taxonomy.py  monophyly_assessor.py  process_interlineage_distances.py  singlem_an_sra.py  singlem_mapper.py  singlem_mapper.yml  sra_input_generator.py
metagenome_otus/: metagenome_otus.py
preludes/: appraise_prelude.html  data_prelude.html  index.html  lyrebird_data_prelude.html  lyrebird_pipe_prelude.html  makedb_prelude.html  microbial_fraction_prelude.html  pipe_prelude.html  prokaryotic_fraction_prelude.html  seqs_prelude.html  summarise_prelude.html  supplement_prelude.html
singlem/: __init__.py  __main__.py  appraisal_result.py  appraiser.py  archive_otu_table.py  chainsaw.py  chancer.py  checkm.py  checkm2.py  clusterer.py  condense.py  condense_joint.py  dereplicator.py  diamond_parser.py  diamond_spkg_searcher.py  genome_fasta_mux.py  genome_size.py  graftm_result.py  hmm_logo.py  kingfisher_sra.py  known_otu_table.py  known_taxonomy_otu_table.py  lyrebird.py  main.py  metagenome_otu_finder.py  metapackage.py  metapackage_read_name_store.py  ordered_set.py  pipe.py  (+34 more)
(+1692 files in other folders)
